# azquack

./: .dockerignore  .gitignore  Dockerfile  README.md  azure.yaml  pyproject.toml
.codex/skills/azquack-deploy-samples/: SKILL.md
.codex/skills/azquack-deploy-samples/agents/: openai.yaml
.github/workflows/: ci.yml
deploy/: Caddyfile
docs/: architecture.md  duckdb-quack-aca-sticky-session-report.md  local-client.md  sticky-session-experiment.md
infra/: main.bicep  main.parameters.json
infra/modules/: acr.bicep  catalog-storage.bicep  container-app.bicep  keyvault.bicep  postgres.bicep  storage.bicep
scripts/: check.sh  connect-local.sh  setup-azd-env.sh  show-connection-info.sh  validate-deployment.sh  validate-sticky-sessions.py
src/azquack_server/: __init__.py  entrypoint.py  main.py
