[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "azquack"
version = "0.1.0"
description = "DuckDB Quack server backed by DuckLake on Azure Storage and PostgreSQL."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb==1.5.2",
  "psycopg[binary]==3.2.9",
]

[project.scripts]
azquack-init-catalog = "azquack_server.main:init_catalog_main"
azquack-entrypoint = "azquack_server.entrypoint:main"
azquack-server = "azquack_server.main:main"

[tool.setuptools.packages.find]
where = ["src"]
