[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "azquack"
version = "0.1.0"
description = "DuckDB Quack server backed by DuckLake on Azure Storage."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb==1.5.3",
]

[project.scripts]
azquack-entrypoint = "azquack_server.entrypoint:main"
azquack-server = "azquack_server.main:main"

[tool.setuptools.packages.find]
where = ["src"]
